# crosswind

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
api/: Dockerfile  go.mod  go.sum
api/cmd/server/: main.go
api/docs/: embed.go  openapi.yaml
api/internal/config/: config.go
api/internal/handlers/: agents.go  agents_test.go  contexts.go  datasets.go  evals.go  handlers.go  scenarios.go
api/internal/middleware/: auth.go  logging.go  ratelimit.go  timeout.go
api/internal/models/: a2a.go  a2a_test.go  agent.go  context.go  dataset.go  evalrun.go  result.go  scenario.go
api/internal/queue/: redis.go
api/internal/repository/clickhouse/: client.go  eval_details.go  eval_sessions.go
api/internal/repository/mongo/: agents.go  client.go  contexts.go  datasets.go  evalruns.go  results.go  scenarios.go
api/internal/services/: agent_service.go  agent_validation_test.go  analytics_service.go  api_analyzer.go  api_analyzer_test.go  context_service.go  dataset_selector.go  dataset_service.go  eval_service.go  http_request_builder.go  known_tools.go  mcp_discovery.go  mcp_discovery_test.go  recommendation_generator.go  scenario_generator.go  scenario_import_test.go  scenario_service.go  services.go  url_security.go
api/pkg/api/: api.go
api/pkg/crypto/: encryption.go  encryption_test.go
api/pkg/repository/: interfaces.go
api/pkg/storage/: config.go  helpers.go  interfaces.go
api/pkg/storage/gcs/: storage.go
api/pkg/storage/local/: storage.go
context-processor/: Dockerfile  README.md  pyproject.toml
context-processor/src/: main.py
context-processor/src/context_processor_core/context/: extractor.py  processor.py
context-processor/src/context_processor_core/storage/: __init__.py  base.py  factory.py
context-processor/src/crosswind_context/: __init__.py
context-processor/src/crosswind_context/context/: __init__.py  chunker.py  extractor.py  processor.py
context-processor/src/crosswind_context/storage/: gcs.py  local.py
data/datasets/: quick_agentic_v1.json  quick_general_v1.json  quick_redteam_v1.json  quick_trust_agentic_v1.json  quick_trust_v1.json
deploy/: .env.example  docker-compose.analytics.yml  docker-compose.yml
docs/: api-reference.md  configuration.md  getting-started.md  protocols.md
examples/: README.md
examples/the-gadget/: .env.example  Dockerfile  README.md  curl_commands.md  personality.py  pyproject.toml  server.py  test_e2e.sh
examples/the-gadget/tests/: conftest.py  test_integration.py  test_unit.py
examples/the-inside-man/: .env.example  Dockerfile  README.md  curl_commands.md  personality.py  pyproject.toml  server.py  test_e2e.sh
examples/the-inside-man/tests/: conftest.py  test_integration.py  test_unit.py
examples/the-mastermind/: .env.example  Dockerfile  README.md  curl_commands.md  personality.py  pyproject.toml  server.py  test_e2e.sh
examples/the-mastermind/tests/: conftest.py  test_integration.py  test_unit.py
scripts/: pyproject.toml  seed_datasets.py
worker/: Dockerfile  README.md  pyproject.toml
worker/src/agent_eval_core/: __init__.py  config.py  main.py
worker/src/agent_eval_core/evaluation/: __init__.py  followup.py  rate_limiter.py  recommendation_generator.py  runner.py  session.py
worker/src/agent_eval_core/judgment/: __init__.py  embedding.py  keyword.py  llm_judge.py  pipeline.py  turn_evaluator.py
worker/src/agent_eval_core/models/: __init__.py
worker/src/agent_eval_core/protocols/: __init__.py  base.py  openapi_http.py
worker/src/agent_eval_core/storage/: __init__.py  base.py  clickhouse_storage.py  duckdb_storage.py  factory.py
worker/src/agent_eval_core/utils/: __init__.py  crypto.py
worker/src/crosswind/: __init__.py  config.py  main.py
worker/src/crosswind/evaluation/: __init__.py  followup.py  rate_limiter.py  recommendation_generator.py  runner.py  session.py
worker/src/crosswind/judgment/: __init__.py  embedding.py  keyword.py  llm_judge.py  pipeline.py  turn_evaluator.py
worker/src/crosswind/models/: __init__.py  schemas.py
worker/src/crosswind/protocols/: __init__.py  a2a_adapter.py  base.py  mcp_adapter.py  openapi_http.py
worker/src/crosswind/reports/: __init__.py  generator.py
worker/src/crosswind/reports/templates/: report.html
worker/src/crosswind/storage/: __init__.py  clickhouse_storage.py  duckdb_storage.py  factory.py  file_storage.py
worker/src/crosswind/utils/: __init__.py  crypto.py
worker/tests/: TESTING_GUIDELINES.md  __init__.py  conftest.py  protocol_test_utils.py  test_a2a_adapter.py  test_a2a_websocket.py  test_eval_runner_a2a.py  test_eval_runner_mcp.py  test_mcp_adapter.py  test_mcp_discovery.py  test_protocol_selection.py
worker/tests/evaluation/: test_rate_limiter.py
worker/tests/judgment/: __init__.py  test_keyword.py  test_pipeline.py
worker/tests/mcp/: mcp_country_server.py  mcp_weather_server.py
