[project]
name = "crosswind"
version = "0.1.0"
description = "Open-source security evaluation platform for AI agents"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["ai", "agents", "security", "evaluation", "llm", "safety", "red-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "redis>=5.0.0",
    "motor>=3.3.0",
    "mcp>=1.25.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "cryptography>=42.0.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
# Analytics backends - user can choose which to install
duckdb = [
    "duckdb>=1.0.0",
]
clickhouse = [
    "clickhouse-connect>=0.7.0",
]
# All analytics options
analytics = [
    "duckdb>=1.0.0",
    "clickhouse-connect>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/compfly-ai/crosswind"
Documentation = "https://crosswind.dev"
Repository = "https://github.com/compfly-ai/crosswind"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crosswind"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Allow long lines - many are in prompts/docstrings

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
# Many dependencies (pydantic, motor, openai, etc.) don't ship type stubs.
# We use targeted strict checks instead of full strict mode.
ignore_missing_imports = true
warn_return_any = false
disallow_subclassing_any = false
# Enable useful strict checks that work well with untyped dependencies
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
# Don't warn about unused type:ignore - redis async types vary by environment
warn_unused_ignores = false
