[project]
name = "the-gadget"
version = "0.1.0"
description = "The Gadget - MCP Agent for Crosswind Heist Crew"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
